# Oracle-Exploration-Planner

./: .gitignore  pyproject.toml
config/: slam_map.rviz
docs/: AUTO_ROUTE_GENERATION_AND_REVIEW.md  COMMANDS.md  EXPLORATION_ORACLE_PIPELINE.md  EXPLORATION_ROUTE_CANDIDATES.md  GEOMETRY_MAP_BACKEND.md  ISAAC_SENSOR_REPLAY_VALIDATION.md  MANUAL_ROUTE_ANNOTATION.md  MULTISENSOR_AND_ROS2_SLAM.md  PHOTOREAL_TOPDOWN_ANNOTATION.md  ROS2_MULTISENSOR_SLAM.md  SCENE_16_INVENTORY.md  SEED_16_ORACLE_RESULTS.md  SEED_201_100_FRAME_PILOT.md  SEED_201_ADJUSTED_RESULTS.md  SEED_201_USD_SOURCE_OF_TRUTH.md  SEMANTIC_FLOORPLAN_RENDERING.md  SEMIAUTO_EXECUTION_GUIDE.md  SEMIAUTO_PIPELINE.md  USD_OBSTACLE_MAP_ALIGNMENT.md
oracle_explorer/: __init__.py  annotation_obstacles.py  debug_viz.py  grid.py  io_utils.py  isaac_multisensor.py  manual_route.py  mapping.py  metadata_parser.py  object_classification.py  planning.py  qa.py  scene_usd.py  semantic_floorplan.py  start_sampling.py  trajectory.py  traversable_overrides.py  usd_geometry.py  usd_obstacle_alignment.py  usd_obstacle_route.py
scripts/: annotate_manual_route_from_topdown.py  apply_traversable_overrides.py  audit_laserscan_projection.py  audit_manual_route_projection.py  audit_ros2_slam_bag_tf.py  build_approved_exploration_trajectory.py  build_approved_route_trajectory.py  build_manual_trajectory.py  build_oracle_map.py  build_oracle_map_blender.py  build_oracle_map_from_usd_with_blender.py  build_oracle_map_usd.py  build_usd_obstacle_map.py  check_isaac_lidar_capabilities.py  check_manual_route_saved.py  plan_oracle_path.py  (+49 more)
(+71 files in other folders)
